--- a/EmployeeSQL/Bonus.ipynb
+++ b/EmployeeSQL/Bonus.ipynb
@@ -43,7 +43,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "engine = create_engine('postgres://postgres:password@localhost:5432/Sql_challenge')"
+    "engine = create_engine('postgres://postgres:{password}@localhost:5432/Sql_challenge')"
    ]
   },
   {
